--- a/RESTAPI_CORE/Views/Shared/_Layout.cshtml
+++ b/RESTAPI_CORE/Views/Shared/_Layout.cshtml
@@ -1,101 +1,33 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscripciones</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="inscrips.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] -RESTAPI_CORE</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/CRUDCORE.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white text-success border-bottom box-shadow mb-3">
             <div class="container-fluid">
-        <h1>Gestión de Inscripciones</h1>
-            </div>  
-         </nav>
+                <h1>Gestión de Inscripciones</h1>
+            </div>
+        </nav>
 
     </header>
-    <div class="text-right mb-3">
-    <a class="btn btn-primary" href="#" role="button">Agregar Usuario</a>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
     </div>
-    <section class="intro">
-        <div class="bg-image h-100" style="background-color: #f5f7fa;">
-          <div class="mask d-flex align-items-center h-100">
-            <div class="container">
-              <div class="row justify-content-center">
-                <div class="col-12">
-                  <div class="card">
-                    <div class="card-body p-0">
-                      <div class="table-responsive table-scroll" data-mdb-perfect-scrollbar="true">
-                        <table class="table table-striped mb-0">
-                          <thead style="background-color: #0a49a7;">
-                            <tr>
-                              <th scope="col">NOMBRE</th>
-                              <th scope="col">APELLIDO</th>
-                              <th scope="col">DNI</th>
-                              <th scope="col">EDAD</th>
-                              <th scope="col">CORREO</th>
-                              <th scope="col">ACCIONES</th>
 
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td><a href="#" class="myButton">EDITAR</a>
-                                <a href="#" class="delete">ELIMINAR</a></td>
-                            </tr>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td> </td>
-                              <td></td>
-                              <td><a href="#" class="myButton">EDITAR</a>
-                                <a href="#" class="delete">ELIMINAR</a></td>
-                            </tr>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td><a href="#" class="myButton">EDITAR</a>
-                                <a href="#" class="delete">ELIMINAR</a></td>
-                            </tr>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td><a href="#" class="myButton">EDITAR</a>
-                                <a href="#" class="delete">ELIMINAR</a></td>
-                            </tr>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td><a href="#" class="myButton">EDITAR</a>
-                                <a href="#" class="delete">ELIMINAR</a></td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
